--- a/index.qmd
+++ b/index.qmd
@@ -18,21 +18,50 @@ about:
       #icon: body-text
 ---
 
-I help organizations improve how people interact with AI systems in high-risk environments by identifying breakdowns in trust, usability, and decision quality. My approach is grounded in [experimental human factors](posts/exp-hf.qmd) methods.
+I help organizations make AI systems people trust and use, with focus on safety-critical environments. I find where your AI system breaks down in trust, usability, and decision assistance, then fix it with human factors research.
 
-I work with teams deploying AI in safety-critical workflows, building explainable decision-support tools, or researching human use of automation.
+I work with teams building explainable AI tools, decision support systems, and automation that people rely on every day.
 
 #### How I can help:
 
--   Evaluation of human--AI workflows (trust, reliability, workload)
+-   Analyze human--AI interactions to identify trust, usability, and safety risks
 
--   Design and analysis of behavioral experiments
+-   Design AI explanations and user experiences that enhance transparency and user confidence
 
--   Advising on ML explainability and decision support UX
+-   Research collaboration and technical writing
 
--   Collaborative research, white papers, and technical writing
+\
 
-**Get in touch:** gentiledv at gmail dot com
+<a href="services.html" class="btn-minimal">Explore Services</a>
+
+<style>
+  .btn-minimal {
+    display: inline-block;
+    padding: 12px 28px;
+    border: 2px solid #eee;
+    color: #eee;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1rem;
+    border-radius: 4px;
+    transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+    cursor: pointer;
+  }
+
+.btn-minimal:hover {
+  background-color: #ddd;
+  color: #111;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+}
+</style>
+
+
+
+
+
+
+
+<!-- Get in touch: gentiledv at gmail dot com  -->
 
 <!-- I'm a human factors researcher focused on decision automation. I design systems, workflows, and products that support task performance, reduce time on the task, and manage workload. -->
 
