--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Davide Gentile"
-subtitle: "Designing AI tools for human performance"
+title: "Designing AI for People"
+subtitle: "I help organizations build human-centered AI for safety-critical systems, combining human factors and UX methods."
 about:
   template: solana
   #image: images/profile2.jpg
@@ -18,28 +18,18 @@ about:
       #icon: body-text
 ---
 
-I help organizations make AI systems people trust and use, with focus on safety-critical environments. I find where your AI system breaks down in trust, usability, and decision assistance, then fix it with human factors research.
 
-I work with teams building explainable AI tools, decision support systems, and automation that people rely on every day.
-
-#### How I can help:
-
--   Analyze human--AI interactions to identify trust, usability, and safety risks
-
--   Design AI explanations and user experiences that enhance transparency and user confidence
-
--   Research collaboration and technical writing
-
-\
 
 <a href="services.html" class="btn-minimal">Explore Services</a>
 
+```{=html}
 <style>
   .btn-minimal {
     display: inline-block;
     padding: 12px 28px;
-    border: 2px solid #eee;
-    color: #eee;
+    border: 2px solid #333;
+    color: #333;
+    background-color: transparent;
     text-decoration: none;
     font-weight: 600;
     font-size: 1rem;
@@ -48,19 +38,13 @@ I work with teams building explainable AI tools, decision support systems, and a
     cursor: pointer;
   }
 
-.btn-minimal:hover {
-  background-color: #ddd;
-  color: #111;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-}
+  .btn-minimal:hover {
+    background-color: #333;
+    color: #fff;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  }
 </style>
-
-
-
-
-
-
-
+```
 <!-- Get in touch: gentiledv at gmail dot com  -->
 
 <!-- I'm a human factors researcher focused on decision automation. I design systems, workflows, and products that support task performance, reduce time on the task, and manage workload. -->
