--- a/contact.qmd
+++ b/contact.qmd
@@ -2,4 +2,6 @@
 title: "Contact"
 ---
 
-Ready to make your AI systems safer and more effective? Let\'s talk.
+Contact me if you are ready to make your AI systems effective and safe.
+
+gentiledv at gmail dot com
