--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Human Factors & AI Risk"
-subtitle: "Empowering organizations to build safer, more effective human-AI systems."
+subtitle: "Empowering organizations to build effective and safe human-AI systems"
 about:
-  template: solana
+  template: jolla
   #image: images/profile2.jpg
   #image-width: 7em
   #image-shape: round
@@ -18,9 +18,9 @@ about:
       #icon: body-text
 ---
 
-Unlock the full potential of AI by optimizing the human side of your systems. I help organizations bridge the gap between people and AI, ensuring your technology is not just powerful---but usable, trustworthy, and aligned with real-world needs.
+Discover how your team can get the most from AI by making it work seamlessly for those who use it. I work with organizations to close operational gaps between people and AI, so that your technology is intuitive, reliable, and meets your needs.
 
-<a href="services.html" class="btn-minimal">Explore Services</a> <a href="contact.html" class="btn-minimal">Book a Free Consultation</a>
+<a href="services.html" class="btn-minimal">Explore Services</a>
 
 ```{=html}
 <style>
