--- a/portfolio/ux-ericsson/index.qmd
+++ b/portfolio/ux-ericsson/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Development of Model Interpretability Tool"
+title: "Development and UX Analysis of ML Model Interpretability Tool"
 author: "Davide Gentile"
 description: "During my internship at Ericsson, I contributed to the development of a glyph-based polar chart to enhance the interpretability of machine learning models. "
 date: "2024-06-12"
