--- a/publications.qmd
+++ b/publications.qmd
@@ -4,22 +4,23 @@ title: "Publications"
 title-block-banner: false
 ---
 
-Lists of academic publications on explainable AI, human factors, and decision automation. 
+Lists of academic publications on explainable AI, human factors, and decision automation.
+
+[\< Back](index.qmd)
 
 Highlighted work:
 
--    **Supporting human performance with post-hoc explanations in automated decision assistance **\
+-   **Supporting human performance with post-hoc explanations in automated decision assistance** \
     This is my PhD dissertation. It focuses on how different ways of explaining AI results can influence human decisions to rely on AI or not.\
     [View dissertation →](https://utoronto.scholaris.ca/items/01bf5af5-98ce-4a35-9a99-3f482c17a5a6)
 
--    **Combining normative and contrastive explanations can benefit user reliance on machine learning advice, workload, and trust in automation**\
-A human-subjects experiment (N=24) tested how normative and contrastive explanations impact user reliance on a machine learning aid for hydraulic system maintenance. Normative explanations lowered decision time and subjective workload, while the addition of contrastive explanations also improved participants' ability to distinguish between correct and incorrect ML estimations. \
+-   **Combining normative and contrastive explanations can benefit user reliance on machine learning advice, workload, and trust in automation**\
+    A human-subjects experiment (N=24) tested how normative and contrastive explanations impact user reliance on a machine learning aid for hydraulic system maintenance. Normative explanations lowered decision time and subjective workload, while the addition of contrastive explanations also improved participants' ability to distinguish between correct and incorrect ML estimations.\
     [Read in *Journal of Artificial Intelligence* →](https://www.sciencedirect.com/science/article/pii/S0004370223000917)
-    
--   **Combining counterfactual, normative, and contrastive explanations leads to minor improvements in human reliance on machine learning estimations**\
-A follow up human-subject experiment (N=24) added counterfactual explanations to further explore their effect on human performance in the same hydraulic diagnosis task. Including counterfactual explanations reduced false alarms and showed potential to decrease decision time and workload, though these benefits warrant cautious interpretation. \
-    [Read in *International Journal of Human-Computer Studies* →](https://www.sciencedirect.com/science/article/pii/S1071581924002179)
 
+-   **Combining counterfactual, normative, and contrastive explanations leads to minor improvements in human reliance on machine learning estimations**\
+    A follow up human-subject experiment (N=24) added counterfactual explanations to further explore their effect on human performance in the same hydraulic diagnosis task. Including counterfactual explanations reduced false alarms and showed potential to decrease decision time and workload, though these benefits warrant cautious interpretation.\
+    [Read in *International Journal of Human-Computer Studies* →](https://www.sciencedirect.com/science/article/pii/S1071581924002179)
 
 <p><a href="#" onclick="togglePublications(); return false;"> Full list of publications [▼]{#arrow} </a></p>
 
